# isocore

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  meson.build  meson_options.txt
bench/bgp/: bench.h  main.c  update_b.c
bench/core/: bench.h  main.c  netaddr_b.c  patriciatrie_b.c  strutil_b.c
cmake/: add_copyright.py
cmake/Modules/: FindCUnit.cmake  FindLibUnwind.cmake  IsolarioSetup.cmake
example/: simple_calc_example.c  simple_parse_example.c
include/isolario/: backtrace.h  bgp.h  bgpattribs.h  bgpparams.h  bgpprefix.h  bits.h  branch.h  cache.h  dumppacket.h  endian.h  filterintrin.h  filterpacket.h  funcattribs.h  hexdump.h  io.h  json.h  log.h  mrt.h  netaddr.h  parse.h  patriciatrie.h  progutil.h  sockets.h  strutil.h  threading.h  u128_t.h  uint128_t.h  util.h  vt100.h
include/isolario/plus/: io.hpp  json.hpp  main.cpp  netaddr.hpp  restrict.hpp
src/: backtrace.c  bgp.c  bgpattribs.c  bgpparams.c  bgpprefix.c  bits.c  cache.c  dumppacket.c  endian.c  filtercompiler.c  filterdump.c  filterintrin.c  filterpacket.c  hexdump.c  io.c  json.c  log.c  mrt.c  netaddr.c  parse.c  patriciatrie.c  pool.c  progutil.c  sockets.c  strutil.c  threading.c  u128_t.c  uint128_t.c  vm_opcodes.h  vt100.c
test/: test_util.h
test/bgp/: attribs.c  main.c  open.c  test.h  update.c
test/core/: dumppacket_t.c  hexdump_t.c  io_t.c  json_t.c  log.c  main.c  netaddr.c  netaddr_t.c  patriciatrie.c  patriciatrie_t.c  strutil.c  strutil_t.c  test.h  u128_t.c  uint128_t.c
test/filter/: main.c  mrt_filter_t.c  test.h
test/log/: log.c  main.c  test.h
test/strutil/: main.c  splitjoin.c  test.h  trim.c
