option('build-benchmarks', type : 'boolean', value : 'false', description : 'Build benchmarks using CBench')
option('build-examples', type : 'boolean', value : 'false', description : 'Build API example programs')
option('build-tests', type : 'boolean', value : 'false', description : 'Build test programs using CUnit')
